--- a/browser/js/authorized/myCourses/myCourses.html
+++ b/browser/js/authorized/myCourses/myCourses.html
@@ -20,7 +20,7 @@
                             <div class="info-wrap m-t--5 p-l-0">
                                 <div class="title-box">
                                     <span class="main-title">You are {{teacher ? 'teaching the courses below.' : 'taking the courses below'}}</span>
-                                   <!--  <span class="reltd-title">Lorem ipsum dolor sit amet, consectetur adipiscing</span> -->
+                                    <!--  <span class="reltd-title">Lorem ipsum dolor sit amet, consectetur adipiscing</span> -->
                                 </div>
                             </div>
                             <div class="info-btn" ng-if="teacher">
@@ -31,7 +31,7 @@
                 </div>
                 <!-- / info bar -->
                 <!-- Quiz Listing controles start -->
-<!--                 <div class="row m-b-3em">
+                <!--                 <div class="row m-b-3em">
                     <div class="col-md-12">
                         <form class="form-horizontal float-lt" method="get">
                             <div class="select-field clearfix">
@@ -52,28 +52,20 @@
                 <!-- / Quiz Listing controles end -->
                 <!-- Quiz Listing start -->
                 <div class="row">
-                    <div class="col-lg-3 col-md-3 col-sm-4 quiz-block my-course-block mar-btm-30" ng-repeat = "class in classrooms track by $index">
-                        <img class="course-thumbnails" ng-src="{{class.image}}" alt="Course" title="Course">
+                    <div class="col-lg-4 col-md-4 col-sm-6 quiz-block mar-btm-30" ng-repeat="class in classrooms track by $index" >
+                        <a ng-click="transition(class.id)"> <img ng-src="{{class.image}}" alt="{{class.title}}" title="{{class.title}}"></a>
                         <div class="outlined pad-20">
-                            <div class="activity-title">{{class.title}}<i class="fa fa-check-circle geen-text pull-right"></i>
+                            <div class="mycour activity-title"><a ng-click="transition(class.id)">{{class.title}} </a><i class="fa fa-check-circle geen-text pull-right"></i>
                                 <br>
-                                <div class="row">
-<!--                                 <span class="desc-det">
-                                    <span class="desc-lbl p-l-0">{{class.description}}</span>
-                                </span> -->
-                                </div>
-                                <div class="row" ng-repeat="(key,value) in class.times">
-                                    <span class="label label-primary" >{{weekdays[key]}}: {{value.start | date:'HH:mm a'}}-{{value.end | date:'HH:mm a'}}</span>
-
+                                <span class="desc-det">
+                                    <span class="desc-lbl p-l-0" ng-repeat="(key,value) in class.times">{{weekdays[key]}}: {{value.start | date:'HH:mm a'}}-{{value.end | date:'HH:mm a'}}
+</span>
                                 </span>
-                                </div>
                             </div>
                         </div>
                         <div class="outlined pad-10 clearfix no-top-border">
-                            <div class="row">
-                            <a href="" class="fill-btn yello-btn slim-btn col-sm-5" ng-click="transition(class.id)">View</a>
-                            <a ng-if="teacher" class="fill-btn btn-danger slim-btn col-sm-5" ng-click="editClassroom(class.id)">Edit</a>
-                            </div>
+                            <a href="#/app/course-detail" class="fill-btn yello-btn float-lt slim-btn" ng-click="transition(class.id)">View Course</a>
+                            <a href="" class="outlined-btn gray-btn float-rt m-r-0" ng-click="editClassroom(class.id)"><i class="fa fa-pencil"></i></a>
                         </div>
                     </div>
                 </div>
