--- a/browser/js/authorized/teachers/quizDashboard/quizDashboard.html
+++ b/browser/js/authorized/teachers/quizDashboard/quizDashboard.html
@@ -12,18 +12,19 @@
         <div class="wrapper-md">
             <!-- info bar -->
             <div class="row m-b-3em">
-                <div class="col-md-12">
-                    <div class="outlined pad-20 info-bar clearfix">
-                        <div class="icon-cc"><span><img src="img/credit-card.png" alt="CC" title="CC" /></span></div>
-                        <div class="info-wrap m-t--5">
-                            <div class="title-box">
-                                <span class="main-title">Create a New Quiz</span>
-                                <span class="reltd-title">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
+                                <div class="col-md-12">
+                        <div class="clearfix">
+                            <div class="info-wrap m-t--5 p-l-0">
+                                <div class="title-box">
+                                    <span class="main-title">My Quizzes.</span>
+                                    <span class="reltd-title">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
+                                </div>
+                            </div>
+                            <div class="info-btn">
+                                <a class="outlined-btn red-btn cancel-payroll" ui-sref="newQuiz">+ New Quiz</a>
                             </div>
                         </div>
-                        <div class="info-btn"><a href="" class="fill-btn" ui-sref="newQuiz">New Quiz</a></div>
                     </div>
-                </div>
             </div>
             <!-- / info bar -->
             <!-- Quiz Listing controles start -->
@@ -39,10 +40,10 @@
                             </div>
                         </div>
                     </form>
-                    <div class="view-as float-rt clearfix">
+                    <!-- <div class="view-as float-rt clearfix">
                         <a class="view float-rt" href=""><i class="fa fa-bars"></i></a>
                         <a class="view float-rt active" href=""><i class="fa fa-th"></i></a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <!-- / Quiz Listing controles end -->
