--- a/browser/js/authorized/profile/settings/settings.html
+++ b/browser/js/authorized/profile/settings/settings.html
@@ -13,7 +13,7 @@
                 <div class="col-sm-8">
                     <div class="row">
                         <div class="col-md-6">
-                            <input ng-model ="user.firstName" type="text" class="form-control" placeholder="First Name">
+                            <input ng-model="user.firstName" type="text" class="form-control" placeholder="First Name">
                         </div>
                         <div class="col-md-6">
                             <input type="text" ng-model="user.lastName" class="form-control" placeholder="Last Name">
@@ -122,12 +122,11 @@
             </div>
             <br>
             <div class="form-group">
-                <div class="row" ng-repeat="day in days track by $index" ng-show="day ==true">
-                    <label class="col-sm-2 control-label">{{weekdays[$index]}}: </label>
+                <div class="row ng-scope" ng-repeat="day in days track by $index" ng-show="day ==true">
+                    <label class="col-sm-2 control-label m-b-20 ng-binding">{{weekdays[$index]}}: </label>
                     <div class="col-sm-8">
-                        <input type="time" id="exampleInput" name="input" ng-model="times[$index].start" placeholder="HH:mm:ss" /> 
-                        to 
-                        <input type="time" id="exampleInput" name="input" ng-model="times[$index].end" placeholder="HH:mm:ss" />
+                        <input class="form-control time-input m-r-20 ng-pristine ng-untouched ng-valid ng-not-empty" type="time" id="exampleInput" name="input" ng-model="times[$index].start" placeholder="HH:mm:ss" /> to
+                        <input class="form-control time-input m-r-20 ng-pristine ng-untouched ng-valid ng-not-empty" type="time" id="exampleInput" name="input" ng-model="times[$index].end" placeholder="HH:mm:ss" />
                     </div>
                 </div>
             </div>
@@ -136,7 +135,7 @@
                 <div class="row" ng-show="teacher">
                     <label class="col-sm-2 control-label">Your Bio</label>
                     <div class="col-sm-8">
-                        <textarea ng-model="user.teacherOptions.bio"></textarea>
+                        <textarea class="form-control" ng-model="user.teacherOptions.bio" placeholder="Type your bio here"></textarea>
                     </div>
                 </div>
             </div>
